# genda-lens

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
abc-adaption/: sanity-check.xlsx  ~$sanity-check.xlsx
abc-adaption/data/: abc_all.txt  abc_female.txt  abc_male.txt  coref_lm.da  professions_to_add_abc.txt  wino_fem.txt  wino_male.txt
abc-adaption/output/: abc_fem_sents.txt  sentence_templates_228.txt
abc-adaption/src/: add-sentences-abc.ipynb  divide-abc.ipynb  retrieve_abc_profs.ipynb
about/: index.html
api/: index.html
api_viz/: index.html
docs/: about.md  api.md  api_viz.md  index.md  installation.md
docs/user_guide/: coref.md  definitions.md  lm.md  metrics.md  ner.md  user_guide_intro.md
genda_lens/: __init__.py  genda_lens.py
genda_lens/coref_tasks/: abc_utils.py  wino_utils.py
genda_lens/data/: DaWinoBias_anti_stereotyped_evalda.txt  DaWinoBias_pro_stereotyped_evalda.txt  abc_male_sents.txt
genda_lens/data/name_aug_csv_files/: first_names_2023_men.csv  first_names_2023_women.csv  (+3 more)
genda_lens/lm_tasks/: abc_utils.py  load_model.py  wino_utils.py
genda_lens/ner_tasks/: augmentation.py  performance.py  process_names.py
home/: index.html
installation/: index.html
search/: search_index.json
tutorials/: LM_demo.ipynb  coref_demo.ipynb  coref_requirements.txt  coref_setup.sh
user_guide/coref/: index.html
user_guide/definitions/: index.html
user_guide/lm/: index.html
user_guide/metrics/: index.html
user_guide/ner/: index.html
user_guide/user_guide_intro/: index.html
