[tool.poetry]
name = "genda-lens"
version = "0.0.3"
description = "A package for quantifying bias in Danish language models."
authors = ["Astrid Rybner, Thea Rolskov <astrid.rybner@hotmail.com>"]
packages = [{include = "genda_lens"}]
license = "MIT"
readme = "README.md"
repository = "https://github.com/DaDebias/genda-lens"

[tool.poetry.dependencies]
python = "^3.9"
spacy = ">=3.5, <3.6"
dacy = ">=2.7.1, <2.8"
pandas = ">=1.5, <1.6"
spacy-wrap = ">=1.4.2, <1.5"
scikit-learn = ">=1.2, <1.3"
seaborn = ">=0.12, <0.13"
matplotlib = ">=3.7, <3.8"
tqdm = ">=4.65.0, <4.66"
transformers = ">=4.28, <4.29"
numpy = ">=1.24, <1.25"
augmenty = ">=1.3.7, <1.4"
fairlearn = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

